--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@ var win = open("http://scratchstats.cf/#"+username);
 win.document.getElementsByTagName("body")[0].innerHTML="<h1>Requirements for S.A.D: Scratcher, 250 loves, 100 faves, 10 shared projects</h1>"+win.document.getElementsByTagName("body")[0].innerHTML;
 }
 </script>
-<button>Go to ScratchStats</button>
+<button onclick="goToSS();">Go to ScratchStats</button>
 </body>
 </html>
