--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ color: red;
 function goToSS() {
 var username = document.getElementsByTagName("p")[1].innerHTML;
 win = open("http://scratchstats.cf/#"+username);
-setTimeout(function(){win.document.getElementsByTagName("body")[0].innerHTML="<h1>Requirements for S.A.D: Scratcher, 250 loves, 100 faves, 10 shared projects</h1>"+win.document.getElementsByTagName("body")[0].innerHTML;},1000);
+setTimeout(function(){win.alert("Requirements for S.A.D: Scratcher, 250 loves, 100 faves, 10 shared projects")},1000);
 }
 </script>
 <button onclick="goToSS();">Go to ScratchStats</button>
