--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@ color: red;
 function goToSS() {
 var username = document.getElementsByTagName("p")[1].innerHTML;
 win = open("http://scratchstats.cf/#"+username);
-setTimeout(function(){win.alert("Requirements for S.A.D: Scratcher, 250 loves, 100 faves, 10 shared projects")},1000);
+
 }
 </script>
 <button onclick="goToSS();">Go to ScratchStats</button>
+  <p>Requirements for S.A.D: Scratcher, 250 loves, 100 faves, 10 shared projects</p>
 </body>
 </html>
